# NUCLEO-G071RB

./: CMakeLists.txt  README.md  STM32G071RBTX_FLASH.ld  STM32G0B1RETX_FLASH.ld  TIPS.md
.cpptest/: cpptestct-mcp.log.1
.cpptest/cpptestct-mcp/tools/search_documentation/5635B2D5/: _0.cfe  _0.cfs  _0.si  segments_1
.cpptest/cpptestmcp/: cpptestmcp.log.1
.cpptest/cpptestmcp/tools/get_relevant_rules/3209E969/: _0.cfe  _0.cfs  _0.si  segments_1
.cpptest/cpptestmcp/tools/search_documentation/25009A61/: _0.cfe  _0.cfs  _0.si  segments_1
Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
Src/: main.c  retarget.c  stm32g0xx_it.c
cmake/: arm-none-eabi.cmake
